# ruuid-tools

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
demo/: demo-zone.json  demo.sh  gen-cert.sh  setup-demo.sh
demo/file/: 00000000f11e.json  uuid-document.json
demo/s3-bucket/: 203.0.113.99.uuid  index.html
demo/s3-bucket/.well-known/: did.json  uuid-document.json
demo/s3-bucket/docs/: 5300cafebeef
deploy/: nginx-ruuid.conf.example  preflight.sh  publish-custody.sh  setup-host.sh
docs/: API.md  DEPLOY.md
examples/: README.md  single-domain.json
examples/riverscape.info/: README.md  verify.py  zone.json
examples/riverscape.info/site/.well-known/: uuid-document.json
examples/riverscape.info/site/things/: 000000000001
install/: install-global.sh  uninstall.sh
man/: ruuid.1
ruuid/: __init__.py  anchor.py  cli.py  core.py  ct_logs.json  did.py  driver.py  generate.py  issue.py  proof.py  resolve.py  schemes.py  sct.py  seal.py  verify.py
tests/: conftest.py  test_anchor.py  test_cli.py  test_core.py  test_driver.py  test_generate.py  test_integration.py  test_issue.py  test_proof.py  test_resolve.py  test_sct.py  test_seal.py  test_vectors.json  test_vectors.py  test_verify.py
tests/fixtures/: le-prod-ip-cert.pem
uni-resolver-driver/: Dockerfile  README.md  docker-compose.yml
