[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ruuid"
version = "0.0.1"
description = "Resolvable UUIDs (Internet Draft, work in progress)"
requires-python = ">=3.10"
dependencies = [
    "dnspython>=2.4",
    "dnslib>=0.9",
]

[project.optional-dependencies]
# SCT verification (ruuid.sct / `ruuid sct`, and --verify-scts) needs the
# `cryptography` package; the rest of the tool runs on openssl + stdlib.
sct = [
    "cryptography>=42",
]
test = [
    "pytest>=7",
    "cryptography>=42",
]

[project.scripts]
ruuid = "ruuid.cli:main"
ruuid-did-uuid-driver = "ruuid.driver:main"

[tool.hatch.build.targets.wheel]
packages = ["ruuid"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Treat warnings as errors so leaked resources (unclosed sockets,
# temp-file-backed HTTPError bodies) surface as test failures instead
# of silently passing. Add targeted `ignore::` entries here if a
# dependency emits unavoidable noise.
filterwarnings = ["error"]
